// Interface para funcionalidades de aparelho telefônico
public interface AparelhoTelefonico {
  void ligar(String numero);
  void atender();
  void iniciarCorreioVoz();
}