// Interface para funcionalidades de navegador de internet
public interface NavegadorInternet {
  void exibirPagina(String url);
  void adicionarNovaAba();
  void atualizarPagina();
}
